# riffpe

./: .gitignore  Benchmark-old.md  Benchmark.md  LICENSE  MANIFEST.in  README.md  TODO  pyproject.toml  riffpe.ipynb  riffpe_permutations.ipynb  setup.py
.github/workflows/: wheels.yml
examples/: riffpe.ipynb
libriffpe/: CMakeLists.txt
libriffpe/cmake/: CheckCompilerSupport.cmake
libriffpe/cmake/test_sources/: detect_arm64_aesneon.cpp  detect_x86_aesni.cpp  detect_x86_get_cpuid.cpp  detect_x86_mm_loadu_si64.cpp
libriffpe/include/riffpe/: AESEngine.hpp  Riffpe.hpp  RiffpeX.hpp  detail.hpp
libriffpe/src/: AESEngine.cpp  AESEngineAESNI.cpp  AESEngineAESNI.hpp  AESEngineARM64.cpp  AESEngineARM64.hpp  AESEngineGeneric.cpp  AESEngineGeneric.hpp  RifflePerm.hpp  Riffpe.cpp  RiffpeX.cpp  arm_utils.hpp  compiler_id.h  mem_utils.hpp  perf.hpp  radix_tree.hpp  riffpe_detail.hpp  x86_utils.hpp
libriffpe/tests/: test_aes_engine.cpp  test_benchmark.cpp
pyriffpe/: pyproject.toml  setup.py  setup_cmake.py
pyriffpe/examples/: riffpe.ipynb
pyriffpe/extras/: .gitignore  benchmark.py  benchmark2md.py  compute_kat.py  gopy.patch  make_fpe_bindings.py
pyriffpe/riffpe/: CMakeLists.txt  GraFFX.py  __init__.py  __main__.py  _cli_tools.py  _native.cpp  decrypt.py  encrypt.py
pyriffpe/riffpe/_common/: __init__.py  converters.py
pyriffpe/riffpe/_fallback/: CBCTweakablePRNG.py  CTRTweakablePRNG.py  Perm.py  Riffpe.py  RiffpeX.py  __init__.py
pyriffpe/riffpe/common/: TweakablePRNG.py
pyriffpe/riffpe/fallback/: CBCTweakablePRNG.py
pyriffpe/riffpe/native/: CMakeLists.txt  libriffpe_bindings.cpp
pyriffpe/tests/: test_bases.py  test_parity.py  test_quickselect.py  test_riffpe.py
riffpe/: __init__.py  __main__.py  perm.py  riffpe.py  test_perm.py  test_riffpe.py  tweakable_prng.py
riffpe/fallback/: Riffpe.py
riffpe/native/: CMakeLists.txt  riffpe_native.cp37-win_amd64.pyd
riffpe/native/cmake/: CheckCompilerSupport.cmake  CheckHWAcceleration.cmake
riffpe/native/cmake/test_sources/: detect_x86_aesni.cpp  detect_x86_cpuid.cpp  detect_x86_get_cpuid.cpp  detect_x86_mm_loadu_si64.cpp
riffpe/native/src/: aes.hpp  aes_generic.cpp  aes_x86_aesni.cpp  intel_utils.hpp  riffpe_native.cpp  x86_utils.hpp
riffpe/native/test/: test_riffpe_native.cpp
tests/: test_riffpe.py
