[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "ninja",
    "cmake>=3.18",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pyriffpe"]

[project]
name = "riffpe"
version = "0.2.0"
authors = [
    { name="Filip Zagórski", email="filip.zagorski@pwr.edu.pl" },
    { name="Marcin Słowik",  email="marcin.slowik@pwr.edu.pl" },
]
maintainers = [
    { name="Marcin Słowik",  email="marcin.slowik@pwr.edu.pl" },
]

description = "Riffle-Shuffle-based Format Preserving Encryption"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pycryptodome"
]

[project.optional-dependencies]
tests = [
  "pytest"
]

[project.urls]
"Homepage" = "https://github.com/filipzz/riffpe"
"Bug Tracker" = "https://github.com/filipzz/riffpe/issues"
